style/underpost.css
html, body {

	position: absolute;
	display: block;
	background: black;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	cursor: default;
	font-family: 'retro-font', arial;
	color: white;
	overflow: hidden;
	font-size: 14px;

}

/*

@font-face {
	font-family: 'retro-font';
	src: URL('/assets/fonts/PressStart2P.ttf') format('truetype');
}

html {

cursor : url('/assets/smart.cur') 0 0, auto;

text-shadow: X px Y px BLUR px #color;
box-shadow: X px Y px BLUR px MARCO px #color;
transition: .3s;

box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 10px 30px 0 rgba(0, 0, 0, 0.3);

 line-height: 0.2;  -> altura que ocupa texto en linea

}

*/

a {

	color: magenta;
	text-decoration: underline;
	cursor: pointer;

}

.fl {

	position: relative;
	display: flow-root;

}

.fll {

	float: left;

}

.flr {

	float: right;

}

.abs {

	position: absolute;
	display: block;

}

.in {

	position: relative;
	display: block;

}

.inl {

	position: relative;
	display: inline;

}

.fix {

	position: fixed;
	display: block;

}

.center {

	transform: translate(-50%,-50%);
	top: 50%;
	left: 50%;
	width: 100%;
	text-align: center;

}

h1, h2 {

	display: none;

}

input, textarea {

	outline: none !important;
	border: none;

}

::placeholder {
  color: white;
  opacity: 1; /* Firefox */
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
 color: white;
}

::-ms-input-placeholder { /* Microsoft Edge */
 color: white;
}

::-moz-selection { /* Code for Firefox */
  color: black;
  background: red;
}

::selection {
  color: black;
  background: red;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

